Add ENABLE_MANAGED_DB env variable

--- a/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
+++ b/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
@@ -43,6 +43,8 @@ spec:
                   optional: false
             - name: RUNTIME_POLL_PERIOD
               value: 10s
+            - name: ENABLE_MANAGED_DB
+              value: "$ENABLE_MANAGED_DB"
 
           image: "${FLEET_MANAGER_IMAGE}"
           imagePullPolicy: IfNotPresent
