--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,5 +117,5 @@ jobs:
           QUAY_PROBE_TOKEN: ${{ secrets.QUAY_RHACS_ENG_PROBE_RW_PASSWORD }}
           QUAY_PROBE_IMAGE_REPOSITORY: rhacs-eng/blackbox-monitoring-probe-service
         run: |
-          chmod +x ./build_deploy.sh
-          ./build_deploy.sh
+          chmod +x ./build_push_with_probe.sh.sh
+          ./build_push_with_probe.sh.sh
