--- a/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
+++ b/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
@@ -49,6 +49,12 @@ spec:
               value: "$MANAGED_DB_SECURITY_GROUP"
             - name: MANAGED_DB_SUBNET_GROUP
               value: "$MANAGED_DB_SUBNET_GROUP"
+            - name: MANAGED_DB_ACCESS_KEY_ID
+              value: "$MANAGED_DB_ACCESS_KEY_ID"
+            - name: MANAGED_DB_SECRET_ACCESS_KEY
+              value: "$MANAGED_DB_SECRET_ACCESS_KEY"
+            - name: MANAGED_DB_SESSION_TOKEN
+              value: "$MANAGED_DB_SESSION_TOKEN"
 
           image: "${FLEET_MANAGER_IMAGE}"
           imagePullPolicy: IfNotPresent
