--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -19,34 +19,41 @@ spec:
     spec:
       serviceAccountName: fleetshard-sync
       containers:
-      - name: fleetshard-sync
-        image: {{ .Values.fleetshardSync.image | quote }}
-        imagePullPolicy: IfNotPresent
-        command:
-        - /usr/local/bin/fleetshard-sync
-        env:
-        - name: OCM_TOKEN
-          value: {{ .Values.fleetshardSync.ocmToken }}
-        - name: FLEET_MANAGER_ENDPOINT
-          value: {{ .Values.fleetshardSync.fleetManagerEndpoint }}
-        - name: CLUSTER_ID
-          value: {{ .Values.fleetshardSync.clusterId }}
-        - name: CREATE_AUTH_PROVIDER
-          value: "{{ .Values.fleetshardSync.createAuthProvider }}"
-        - name: AUTH_TYPE
-          value: {{ .Values.fleetshardSync.authType }}
-        - name: STATIC_TOKEN
-          value: {{ .Values.fleetshardSync.staticToken }}
-        - name: EGRESS_PROXY_IMAGE
-          value: {{ .Values.fleetshardSync.egressProxy.image | quote }}
-        - name: RHSSO_SERVICE_ACCOUNT_CLIENT_ID
-          value: {{ .Values.fleetshardSync.redHatSSO.clientId }}
-        - name: RHSSO_SERVICE_ACCOUNT_CLIENT_SECRET
-          value: {{ .Values.fleetshardSync.redHatSSO.clientSecret }}
-        - name: RHSSO_REALM
-          value: {{ .Values.fleetshardSync.redHatSSO.realm }}
-        - name: RHSSO_ENDPOINT
-          value: {{ .Values.fleetshardSync.redHatSSO.endpoint }}
-        ports:
-        - name: monitoring
-          containerPort: 8080
+        - name: fleetshard-sync
+          image: {{ .Values.fleetshardSync.image | quote }}
+          imagePullPolicy: IfNotPresent
+          command:
+            - /usr/local/bin/fleetshard-sync
+          env:
+            - name: OCM_TOKEN
+              value: {{ .Values.fleetshardSync.ocmToken }}
+            - name: FLEET_MANAGER_ENDPOINT
+              value: {{ .Values.fleetshardSync.fleetManagerEndpoint }}
+            - name: CLUSTER_ID
+              value: {{ .Values.fleetshardSync.clusterId }}
+            - name: CREATE_AUTH_PROVIDER
+              value: {{ .Values.fleetshardSync.createAuthProvider }}
+            - name: AUTH_TYPE
+              value: {{ .Values.fleetshardSync.authType }}
+            - name: STATIC_TOKEN
+              value: {{ .Values.fleetshardSync.staticToken }}
+            - name: EGRESS_PROXY_IMAGE
+              value: {{ .Values.fleetshardSync.egressProxy.image | quote }}
+            - name: RHSSO_SERVICE_ACCOUNT_CLIENT_ID
+              value: {{ .Values.fleetshardSync.redHatSSO.clientId }}
+            - name: RHSSO_SERVICE_ACCOUNT_CLIENT_SECRET
+              value: {{ .Values.fleetshardSync.redHatSSO.clientSecret }}
+            - name: RHSSO_REALM
+              value: {{ .Values.fleetshardSync.redHatSSO.realm }}
+            - name: RHSSO_ENDPOINT
+              value: {{ .Values.fleetshardSync.redHatSSO.endpoint }}
+            - name: TELEMETRY_ENDPOINT
+              value: {{ .Values.fleetshardSync.telemetry.storage.endpoint }}
+            - name: TELEMETRY_STORAGE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: rhacs-telemetry-storage-key
+                  key: KEY
+          ports:
+            - name: monitoring
+              containerPort: 8080
