Move aws credentials to secret

--- a/dev/env/manifests/fleetshard-sync/01-fleetshard-sync-secrets.yaml
+++ b/dev/env/manifests/fleetshard-sync/01-fleetshard-sync-secrets.yaml
@@ -8,3 +8,6 @@ stringData:
     ${KUBE_CONFIG}
   rhsso-service-account-client-id: "${RHSSO_SERVICE_ACCOUNT_CLIENT_ID}"
   rhsso-service-account-client-secret: "${RHSSO_SERVICE_ACCOUNT_CLIENT_SECRET}"
+  rds-access-key-id: "${MANAGED_DB_ACCESS_KEY_ID}"
+  rds-secret-access-key: "${MANAGED_DB_SECRET_ACCESS_KEY}"
+  rds-sesion-token: "${MANAGED_DB_SESSION_TOKEN}"
