--- a/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
+++ b/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
@@ -50,12 +50,23 @@ spec:
             - name: MANAGED_DB_SUBNET_GROUP
               value: "$MANAGED_DB_SUBNET_GROUP"
             - name: MANAGED_DB_ACCESS_KEY_ID
-              value: "$MANAGED_DB_ACCESS_KEY_ID"
+              valueFrom:
+                secretKeyRef:
+                  name: fleetshard-sync
+                  key: "rds-access-key-id"
+                  optional: true
             - name: MANAGED_DB_SECRET_ACCESS_KEY
-              value: "$MANAGED_DB_SECRET_ACCESS_KEY"
+              valueFrom:
+                secretKeyRef:
+                  name: fleetshard-sync
+                  key: "rds-secret-access-key"
+                  optional: true
             - name: MANAGED_DB_SESSION_TOKEN
-              value: "$MANAGED_DB_SESSION_TOKEN"
-
+              valueFrom:
+                secretKeyRef:
+                  name: fleetshard-sync
+                  key: "rds-sesion-token"
+                  optional: true
           image: "${FLEET_MANAGER_IMAGE}"
           imagePullPolicy: IfNotPresent
           name: fleetshard-sync
