ROX-13004: Provision RDS instances and clusters (#542)

--- a/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
+++ b/dev/env/manifests/fleetshard-sync/02-fleetshard-sync-deployment.yaml
@@ -43,7 +43,30 @@ spec:
                   optional: false
             - name: RUNTIME_POLL_PERIOD
               value: 10s
-
+            - name: MANAGED_DB_ENABLED
+              value: "$MANAGED_DB_ENABLED"
+            - name: MANAGED_DB_SECURITY_GROUP
+              value: "$MANAGED_DB_SECURITY_GROUP"
+            - name: MANAGED_DB_SUBNET_GROUP
+              value: "$MANAGED_DB_SUBNET_GROUP"
+            - name: MANAGED_DB_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: fleetshard-sync
+                  key: "rds-access-key-id"
+                  optional: true
+            - name: MANAGED_DB_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: fleetshard-sync
+                  key: "rds-secret-access-key"
+                  optional: true
+            - name: MANAGED_DB_SESSION_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: fleetshard-sync
+                  key: "rds-sesion-token"
+                  optional: true
           image: "${FLEET_MANAGER_IMAGE}"
           imagePullPolicy: IfNotPresent
           name: fleetshard-sync
