--- a/.github/workflows/deploy-stage.yaml
+++ b/.github/workflows/deploy-stage.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Deploy probe
         working-directory: ./deploy/helm/probe
         env:
-          USE_AWS_VAULT: false
+          AWS_AUTH_HELPER: none # credentials are populated by the above action
         run: |
           set -euo pipefail
           ./deploy.sh stage acs-stage-dp-02
