Quote MANAGED_DB_ENABLED value

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -56,7 +56,7 @@ spec:
         - name: RHSSO_ENDPOINT
           value: {{ .Values.fleetshardSync.redHatSSO.endpoint }}
         - name: MANAGED_DB_ENABLED
-          value: {{ .Values.fleetshardSync.managedDB.enabled }}
+          value: {{ .Values.fleetshardSync.managedDB.enabled | quote }}
         {{ if eq .Values.fleetshardSync.managedDB.enabled true }}
         - name: MANAGED_DB_SUBNET_GROUP
           value: {{ required "fleetshardSync.managedDB.subnetGroup is required when fleetshardSync.managedDB.enabled = true" .Values.fleetshardSync.managedDB.subnetGroup }}
