Add AWS role arn parameter to the Helm chart

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -29,6 +29,9 @@ fleetshardSync:
     enabled: true
     subnetGroup: ""
     securityGroup: ""
+  aws:
+    region: "us-east-1"
+    roleARN: ""
 
 acsOperator:
   enabled: false
