Add AWS role arn parameter to the Helm chart (#649)

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -57,12 +57,16 @@ spec:
           value: {{ .Values.fleetshardSync.redHatSSO.endpoint }}
         - name: MANAGED_DB_ENABLED
           value: {{ .Values.fleetshardSync.managedDB.enabled | quote }}
-        {{ if eq .Values.fleetshardSync.managedDB.enabled true }}
+        {{- if eq .Values.fleetshardSync.managedDB.enabled true }}
         - name: MANAGED_DB_SUBNET_GROUP
           value: {{ required "fleetshardSync.managedDB.subnetGroup is required when fleetshardSync.managedDB.enabled = true" .Values.fleetshardSync.managedDB.subnetGroup }}
         - name: MANAGED_DB_SECURITY_GROUP
           value: {{ required "fleetshardSync.managedDB.securityGroup is required when fleetshardSync.managedDB.enabled = true" .Values.fleetshardSync.managedDB.securityGroup }}
-        {{ end }}
+        {{- end }}
+        - name: AWS_REGION
+          value: {{ .Values.fleetshardSync.aws.region }}
+        - name: AWS_ROLE_ARN
+          value: {{ .Values.fleetshardSync.aws.roleARN }}
         ports:
         - name: monitoring
           containerPort: 8080
