--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -69,7 +69,7 @@ spec:
           value: {{ .Values.fleetshardSync.aws.region }}
         - name: AWS_ROLE_ARN
           value: {{ .Values.fleetshardSync.aws.roleARN }}
-        - name: TELEMETRY_ENDPOINT
+        - name: TELEMETRY_STORAGE_ENDPOINT
           value: {{ .Values.fleetshardSync.telemetry.storage.endpoint | quote }}
         - name: TELEMETRY_STORAGE_KEY
           value: {{ .Values.fleetshardSync.telemetry.storage.key | quote }}
