ROX-13593: Add telemetry storage key to Centrals (#672)
* ROX-13593: Add telemetry storage key to Centrals

* separate telemetry config struct

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -69,6 +69,10 @@ spec:
           value: {{ .Values.fleetshardSync.aws.region }}
         - name: AWS_ROLE_ARN
           value: {{ .Values.fleetshardSync.aws.roleARN }}
+        - name: TELEMETRY_STORAGE_ENDPOINT
+          value: {{ .Values.fleetshardSync.telemetry.storage.endpoint | quote }}
+        - name: TELEMETRY_STORAGE_KEY
+          value: {{ .Values.fleetshardSync.telemetry.storage.key | quote }}
         ports:
         - name: monitoring
           containerPort: 8080
