deployment mechanism WIP

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 /fleet-manager
 cmd/fleet-manager/fleet-manager
 /fleetshard-sync
+/migrator
 
 # Ignore generated templates
 /templates/*-template.json
