--- a/Dockerfile.hybrid
+++ b/Dockerfile.hybrid
@@ -3,6 +3,7 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5
 COPY \
     fleet-manager \
     fleetshard-sync \
+    migrator \
     /usr/local/bin/
 
 EXPOSE 8000
