Configure central-request-expiration-timeout as env variable

--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -444,6 +444,11 @@ parameters:
   description: Default memory limit for scanner-db deployments for newly created tenants
   value: "2500M"
 
+- name: CENTRAL_REQUEST_EXPIRATION_TIMEOUT
+  displayName: Central request expiration timeout
+  description: Maximum interval after which central request is canceled
+  value: "1h"
+
 objects:
   - kind: ConfigMap
     apiVersion: v1
@@ -1233,6 +1238,7 @@ objects:
             - --central-operator-addon-id=${CENTRAL_OPERATOR_OPERATOR_ADDON_ID}
             - --fleetshard-addon-id=${FLEETSHARD_ADDON_ID}
             - --alsologtostderr
+            - --central-request-expiration-timeout=${CENTRAL_REQUEST_EXPIRATION_TIMEOUT}
             - -v=${GLOG_V}
             resources:
               requests:
