--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -260,6 +260,8 @@ components:
                       type: string
                     ownerOrgId:
                       type: string
+                    ownerOrgName:
+                      type: string
                     issuer:
                       type: string
                 uiEndpoint:
