--- a/.github/workflows/rds.yaml
+++ b/.github/workflows/rds.yaml
@@ -67,6 +67,11 @@ jobs:
           AWS_RDS_DB_SUBNET_GROUP_NAME: ${{ secrets.AWS_RDS_DB_SUBNET_GROUP_NAME }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
+          source "scripts/lib/external_config.sh"
+          export AWS_AUTH_HELPER="none"
+          init_chamber
+          load_external_config fleetshard-sync AWS_RDS_
+
           export GOPATH=$(go env GOPATH)
           export PATH=${PATH}:$GOPATH/bin
           make test/rds
