--- a/.github/workflows/rds.yaml
+++ b/.github/workflows/rds.yaml
@@ -69,10 +69,6 @@ jobs:
           set -euo pipefail
           source "scripts/lib/external_config.sh"
           init_chamber
-          load_external_config fleetshard-sync AWS_RDS_
 
-          export AWS_RDS_SECURITY_GROUP=${AWS_RDS_MANAGED_DB_SECURITY_GROUP}
-          export AWS_RDS_SUBNET_GROUP=${AWS_RDS_MANAGED_DB_SUBNET_GROUP}
-
-          make test/rds
+          run_chamber exec fleetshard-sync -- make test/rds
         timeout-minutes: 35
