--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -1040,6 +1040,9 @@ objects:
               mountPath: /secrets/service
             - name: rds
               mountPath: /secrets/rds
+            env:
+              - name: "OCM_ENV"
+                value: "${ENVIRONMENT}"
             command:
             - /usr/local/bin/fleet-manager
             - migrate
@@ -1051,6 +1054,11 @@ objects:
             - --db-ssl-certificate-file=/secrets/rds/db.ca_cert
             - --db-sslmode=${DB_SSLMODE}
             - --db-max-open-connections=${DB_MAX_OPEN_CONNS}
+            - --ocm-client-id-file=/secrets/fleet-manager-credentials/ocm-service.clientId
+            - --ocm-client-secret-file=/secrets/fleet-manager-credentials/ocm-service.clientSecret
+            - --ocm-base-url=${OCM_URL}
+            - --ams-base-url=${AMS_URL}
+            - --ocm-debug=${OCM_DEBUG}
             - --enable-db-debug=${ENABLE_DB_DEBUG}
             - --alsologtostderr
             - -v=${GLOG_V}
