Add support for using existing log groups created by terraform

--- a/dp-terraform/helm/rhacs-terraform/charts/logging/templates/01-logging-03-cluster-log-forwarder.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/logging/templates/01-logging-03-cluster-log-forwarder.yaml
@@ -12,7 +12,8 @@ spec:
     - name: cloudwatch-output
       type: cloudwatch
       cloudwatch:
-        groupBy: namespaceName
+        groupBy: "logType"
+        groupPrefix: {{ .Values.groupPrefix | quote }}
         region: {{ .Values.aws.region | quote }}
       secret:
         name: cloudwatch
