--- a/dp-terraform/helm/rhacs-terraform/charts/logging/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/logging/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+groupPrefix: ""
 aws:
   region: "us-east-1"
   accessKeyId: ""
