--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -228,6 +228,8 @@ components:
                   type: string
                 namespace:
                   type: string
+                internal:
+                  type: boolean
                 annotations:
                   type: object
                   required:
