--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -47,6 +47,15 @@ acsOperator:
   # This setting specifies whether to use a upstream operator to test unreleased versions of ACS.
   upstream: false
 
+# See available parameters in charts/cloudwatch/values.yaml
+# - enabled flag is used to completely enable/disable cloudwatch sub-chart
+cloudwatch:
+  enabled: true
+  aws:
+    accessKeyId: ""
+    secretAccessKey: ""
+  image: ""
+
 # See available parameters in charts/observability/values.yaml
 # - enabled flag is used to completely enable/disable observability sub-chart
 observability:
