ROX-14270: Deploy cloudwatch exporter to data plane (#801)
* ROX-14270: Deploy cloudwatch exporter to data plane

Add dp-terraform sub-chart to deploy a cloudwatch exporter. The exporter
scrapes RDS database from AWS and exports them as Prometheus metrics.

The exporter is configured via a config map and requires an AWS IAM user
with a cloudwatch permission set.

* use GetMetricData

* add suggested metrics

* fix typo

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -47,6 +47,14 @@ acsOperator:
   # This setting specifies whether to use a upstream operator to test unreleased versions of ACS.
   upstream: false
 
+# See available parameters in charts/cloudwatch/values.yaml
+# - enabled flag is used to completely enable/disable cloudwatch sub-chart
+cloudwatch:
+  enabled: true
+  aws:
+    accessKeyId: ""
+    secretAccessKey: ""
+
 # See available parameters in charts/observability/values.yaml
 # - enabled flag is used to completely enable/disable observability sub-chart
 observability:
