ROX-12462: add env to fleetshard-sync, probe, cloudwatch-exporter

--- a/deploy/helm/probe/values.yaml
+++ b/deploy/helm/probe/values.yaml
@@ -1,6 +1,8 @@
 image: "quay.io/rhacs-eng/blackbox-monitoring-probe-service:main"
 namespace: "rhacs-probe"
 fleetManagerEndpoint: ""
+clusterName: ""
+environment: ""
 # Must be either 'RHSSO' or 'OCM'.
 authType: "RHSSO"
 ocm:
