--- a/dp-terraform/helm/rhacs-terraform/charts/cloudwatch/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/cloudwatch/values.yaml
@@ -3,4 +3,6 @@ aws:
   accessKeyId: ""
   secretAccessKey: ""
 
+clusterName: ""
+environment: ""
 image: "quay.io/prometheus/cloudwatch-exporter:v0.15.1"
