--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -14,6 +14,9 @@ spec:
     type: Recreate
   template:
     metadata:
+      annotations:
+        rhacs.redhat.com/cluster-name: {{ .Values.fleetshardSync.clusterName | quote }}
+        rhacs.redhat.com/environment: {{ .Values.fleetshardSync.environment | quote }}
       labels:
         app: fleetshard-sync
     spec:
