--- a/Dockerfile.hybrid
+++ b/Dockerfile.hybrid
@@ -1,5 +1,7 @@
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5
 
+ADD https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /usr/local/share/ca-certificates/aws-rds-ca-global-bundle.pem
+
 COPY \
     fleet-manager \
     fleetshard-sync \
