ROX-10918: use rhacs label selectors

--- a/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/charts/observability/values.yaml
@@ -14,6 +14,10 @@ github:
   repository: ""
   tag: "master"
 
+clusterName: ""
+resyncPeriod: "1h"
+retention: "45d"
+
 # Credentials for Observatorium https://observatorium.io/ instance
 observatorium:
   tenant: "rhacs"
