--- a/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
+++ b/fleetshard/pkg/central/charts/data/rhacs-operator/values.yaml
@@ -2,4 +2,5 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-operatorVersion: rhacs-operator.v3.74.0
+operator:
+  image: quay.io/rhacs-eng/stackrox-operator:3.73.1
