ROX-15922: update operator requests and limits

--- a/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/acs-operator.yaml
@@ -17,6 +17,14 @@ spec:
   source: {{ .Values.acsOperator.source }}
   sourceNamespace: {{ .Values.acsOperator.sourceNamespace }}
   startingCSV: rhacs-operator.{{ .Values.acsOperator.version }}
+  config:
+    resources:
+      requests:
+        cpu: 1
+        memory: 200Mi
+      limits:
+        cpu: 2
+        memory: 1Gi
 ---
 {{- if .Values.acsOperator.upstream }}
 apiVersion: operators.coreos.com/v1alpha1
