allow POST method for full admins

--- a/config/admin-authz-roles-dev.yaml
+++ b/config/admin-authz-roles-dev.yaml
@@ -15,3 +15,7 @@
   roles:
     - "acs-general-engineering"           # Will include all of ACS engineering. Available also within staging environment.
     - "acs-fleet-manager-admin-full"      # Prod rover group, will only include selected members + SREs.
+- method: POST
+  roles:
+    - "acs-general-engineering"
+    - "acs-fleet-manager-admin-full"
